Fixing problem with error label, now is align with the rest of the controls

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -177,6 +177,8 @@ input[type=text]:focus, input[type=email]:focus, input[type=password]:focus {
 .error {
     color: #b00;
     text-align: left;
+    width: 90%;
+    margin: 0 auto;
 }
 
 .error p {
@@ -332,6 +334,10 @@ input[type=text]:focus, input[type=email]:focus, input[type=password]:focus {
 @media (min-width: 768px) {
     .login-image img{
         width: 55%;
+    }
+    
+    .error {
+        width: 60%;
     }
 
     .static-content #api {
